Fix .main-content overflow on Firefox

--- a/src/routes/global.css
+++ b/src/routes/global.css
@@ -131,6 +131,7 @@ button {
 .main-content {
     padding-bottom: 20px;
     flex-grow: 1;
+    overflow: auto;
 }
 
 @media (max-width: 600px) {
